# pyregrid

./: .gitignore  README.md  index.html  mkdocs.yml  pyproject.toml  pytest.ini  versions.json
.github/workflows/: coverage.yml  docs.yml
0.0.1-alpha/: 404.html  index.html  sitemap.xml
0.0.1-alpha/api-reference/: index.html
0.0.1-alpha/examples/: index.html
0.0.1-alpha/getting-started/: index.html
0.0.1-alpha/installation/: index.html
0.0.1-alpha/noaa-branding-color-inventory/: index.html
0.0.1-alpha/noaa-branding-color-specification/: index.html
0.0.1-alpha/tutorials/: index.html
0.1.0-alpha/: 404.html  index.html  sitemap.xml
0.1.0-alpha/api-reference/: index.html
0.1.0-alpha/examples/: index.html
0.1.0-alpha/getting-started/: index.html
0.1.0-alpha/installation/: index.html
0.1.0-alpha/noaa-branding-color-inventory/: index.html
0.1.0-alpha/noaa-branding-color-specification/: index.html
0.1.0-alpha/search/: search_index.json
0.1.0-alpha/tutorials/: index.html
benchmarks/: README.md  __init__.py  accuracy_validation.py  benchmark_base.py  conftest.py  performance_metrics.py  scalability_testing.py  test_benchmarks.py  test_comprehensive_benchmarks.py  test_high_resolution_benchmarks.py  unified_benchmark.py
docs/: 404.html  getting-started.md  index.html  index.md  installation.md  noaa-branding-color-inventory.md  noaa-branding-color-specification.md  sitemap.xml
docs/api-reference/: index.html  index.md  pyregrid.accessors.md  pyregrid.algorithms.md  pyregrid.core.md  pyregrid.crs.md  pyregrid.dask.md  pyregrid.interpolation.md  pyregrid.md  pyregrid.point_interpolator.md  pyregrid.scattered_interpolation.md  pyregrid.utils.md
docs/development/: architecture.md  contributing.md
docs/examples/: basic_regridding.md  index.html  index.md
docs/getting-started/: index.html
docs/installation/: index.html
docs/noaa-branding-color-inventory/: index.html
docs/noaa-branding-color-specification/: index.html
docs/search/: search_index.json
docs/tutorials/: grid_from_points.md  index.html  index.md  jupyter_notebooks.md
docs/user-guide/: benchmarking-integration.md  benchmarking-results-analysis.md  coordinate-systems.md  core-concepts.md  dask-integration.md  high-resolution-benchmarking.md  interpolation-methods.md  performance-tips.md  regridding-methods.md
latest/: 404.html  index.html  objects.inv  sitemap.xml
latest/api-reference/: index.html
latest/examples/: index.html
latest/getting-started/: index.html
latest/installation/: index.html
latest/noaa-branding-color-inventory/: index.html
latest/noaa-branding-color-specification/: index.html
latest/search/: search_index.json
latest/tutorials/: index.html
pyregrid/: __init__.py  core.py  interpolation.py  point_interpolator.py  scattered_interpolation.py
scripts/: generate_coverage_report.py
tests/: __init__.py  conftest.py  test_accessor_round_trip.py  test_algorithms_interpolators.py  test_analytical_field.py  test_basic.py  test_conservative_regridding.py  test_coordinate_indices.py  test_core.py  test_crs.py  test_dask_fallback.py  test_dask_functionality.py  test_documentation_simple.py  test_edge_cases.py  test_geospatial_edge_cases.py  test_grid_regridder.py  test_high_resolution_benchmarking.py  test_identity_curvilinear_grid.py  test_identity_xarray_toy_dataset.py  test_integration.py  test_integration_workflows.py  test_interpolation_algorithms.py  test_nan_interpolation.py  test_point_interpolator.py  test_round_trip_stability.py  test_scattered_interpolation.py  test_simple_integration.py  test_uniform_round_trip.py  test_xarray_toy_dataset_identity.py
(+111 files in other folders)
